# UV-Docker-Sample

./: Dockerfile  README.md  db.py  db_model.py  docker-compose.yml  main.py  pyproject.toml
